--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,6 @@ header nav img {
     font-size: 0.6rem;
     display: none;
     grid-template-columns: 0.01fr 0.01fr 0.01fr 0.01fr 0.01fr;
-    
     text-decoration: none;
     margin-left: 6.25rem;
 }
@@ -696,7 +695,6 @@ footer{
     
     header nav img {
         margin: left;
-        
     }
     
     
@@ -705,11 +703,11 @@ footer{
         font-size: 0.6rem;
         display: grid;
         grid-template-columns: 0.01fr 0.01fr 0.01fr 0.01fr 0.01fr;
-        
         text-decoration: none;
         margin-left: 6.25rem;
     }
     
+
     
     .ListaP li {
             color: #F6F6F6;
@@ -722,6 +720,12 @@ footer{
             display: flex;
             border-radius: 1.56rem;
             }
+
+
+    .ListaP li:hover{
+        transform: scale(1.3);
+        transition: all 0.4s ease;
+    }
     
     
     
@@ -833,6 +837,11 @@ footer{
         padding: 0.4rem;
         border-radius: 0.6rem;
     }
+
+    .PrimerMasInfo:hover{
+        transform: scale(1.3);
+        transition: all 0.4s ease;
+    }
     
     /* Separacion Segundo Articulo Index */
     
@@ -878,6 +887,11 @@ footer{
         padding: 0.4rem;
         border-radius: 0.6rem;
     }
+
+    .SegundoMasInfo:hover{
+        transform: scale(1.3);
+        transition: all 0.4s ease;
+    }
     
     /* Separacion Tercer Articulo Donaciones */
     
@@ -919,7 +933,11 @@ footer{
         border: #632934 2px solid;
         padding: 0.4rem;
         border-radius: 0.6rem;
-        
+    }
+
+    .TercerMasInfo:hover{
+        transform: scale(1.3);
+        transition: all 0.4s ease;
     }
     
     
@@ -944,3 +962,6 @@ footer{
         justify-content: center;
     }
 }
+
+
+
