--- a/css/main.css
+++ b/css/main.css
@@ -721,12 +721,10 @@ footer{
             border-radius: 1.56rem;
             }
 
-
     .ListaP li:hover{
         transform: scale(1.3);
         transition: all 0.4s ease;
     }
-    
     
     
     .IrAlFooter{
@@ -738,10 +736,12 @@ footer{
     
     
     .ListaRedes li {
-    
     margin: 0.31rem;
-    
-    
+    }
+
+    .ListaRedes li:hover{
+        transform: scale(1.3);
+        transition: all 0.4s ease;
     }
     
     
@@ -838,10 +838,11 @@ footer{
         border-radius: 0.6rem;
     }
 
-    .PrimerMasInfo:hover{
+    .PrimerMasInfo.hover{
         transform: scale(1.3);
         transition: all 0.4s ease;
     }
+
     
     /* Separacion Segundo Articulo Index */
     
